<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.taskadapter</groupId>
    <artifactId>redmine-java-api</artifactId>
    <version>6.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Redmine Java API</name>
    <description>Free open-source Java API for Redmine and Chiliproject bug/task management systems. This project was originally a part of Task Adapter application (http://www.taskadapter.com)</description>
    <url>http://github.com/taskadapter/redmine-java-api</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Alexey Skorokhodov</name>
            <email>alskor@gmail.com</email>
        </developer>
    </developers>

<!--    <scm>-->
<!--        <connection>scm:git:git://github.com/taskadapter/redmine-java-api.git</connection>-->
<!--        <developerConnection>scm:git:git@github.com:taskadapter/redmine-java-api.git</developerConnection>-->
<!--        <url>http://github.com/taskadapter/redmine-java-api/tree/master/</url>-->
<!--        <tag>HEAD</tag>-->
<!--    </scm>-->

<!--    <issueManagement>-->
<!--        <system>github</system>-->
<!--        <url>http://github.com/taskadapter/redmine-java-api/issues</url>-->
<!--    </issueManagement>-->

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.4.4</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250517</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
        <!-- Dipendenze di test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.13.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.slf4j</groupId>-->
<!--            <artifactId>slf4j-jdk14</artifactId>-->
<!--            <version>1.7.25</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <!-- Plugin per generare sorgenti e javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalJOption>-Xdoclint:none</additionalJOption>
                            <quiet>true</quiet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Test per JUnit 5 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
            </plugin>


            <!-- Migrate to ApacheHttpClient 5.x -->
<!--            <plugin>-->
<!--                <groupId>org.openrewrite.maven</groupId>-->
<!--                <artifactId>rewrite-maven-plugin</artifactId>-->
<!--                <version>6.18.0</version>-->
<!--                <configuration>-->
<!--                    <exportDatatables>true</exportDatatables>-->
<!--                    <activeRecipes>-->
<!--                        <recipe>org.openrewrite.apache.httpclient5.UpgradeApacheHttpClient_5</recipe>-->
<!--                    </activeRecipes>-->
<!--                </configuration>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>org.openrewrite.recipe</groupId>-->
<!--                        <artifactId>rewrite-apache</artifactId>-->
<!--                        <version>2.16.0</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->
            <!-- Migrate to JUnit 5 -->
<!--            <plugin>-->
<!--                <groupId>org.openrewrite.maven</groupId>-->
<!--                <artifactId>rewrite-maven-plugin</artifactId>-->
<!--                <version>6.18.0</version>-->
<!--                <configuration>-->
<!--                    <activeRecipes>-->
<!--                        <recipe>org.openrewrite.java.testing.junit5.JUnit5BestPractices</recipe>-->
<!--                    </activeRecipes>-->
<!--                </configuration>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>org.openrewrite.recipe</groupId>-->
<!--                        <artifactId>rewrite-testing-frameworks</artifactId>-->
<!--                        <version>3.16.2</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.openrewrite.maven</groupId>-->
<!--                <artifactId>rewrite-maven-plugin</artifactId>-->
<!--                <version>6.18.0</version>-->
<!--                <configuration>-->
<!--                    <exportDatatables>true</exportDatatables>-->
<!--                    <activeRecipes>-->
<!--                        <recipe>org.openrewrite.java.testing.hamcrest.HamcrestMatcherToJUnit5</recipe>-->
<!--                    </activeRecipes>-->
<!--                </configuration>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>org.openrewrite.recipe</groupId>-->
<!--                        <artifactId>rewrite-testing-frameworks</artifactId>-->
<!--                        <version>3.16.2</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->

            <!-- Plugin per la firma -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-gpg-plugin</artifactId>-->
<!--                <version>3.1.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>sign-artifacts</id>-->
<!--                        <phase>verify</phase>-->
<!--                        <goals>-->
<!--                            <goal>sign</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <skip>${!isReleaseVersion}</skip>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <!-- Plugin per il deploy su Sonatype -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-deploy-plugin</artifactId>-->
<!--                <version>3.1.1</version>-->
<!--                <configuration>-->
<!--                    <altDeploymentRepository>sonatype-nexus-staging::default::https://oss.sonatype.org/service/local/staging/deploy/maven2</altDeploymentRepository>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>

<!--    <distributionManagement>-->
<!--        <repository>-->
<!--            <id>sonatype-nexus-staging</id>-->
<!--            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>-->
<!--        </repository>-->
<!--        <snapshotRepository>-->
<!--            <id>sonatype-nexus-snapshots</id>-->
<!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
<!--        </snapshotRepository>-->
<!--    </distributionManagement>-->
</project>
